--- a/02_navbar/index.html
+++ b/02_navbar/index.html
@@ -23,9 +23,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- para agrupar e esconder conteúdos navbar, de acordo com o breakpoint do pai. -->
-            <div class="collapse navbar-collapse lista" id="navbar-items" id="conteudoNavbarSuportado">
+            <div class="collapse navbar-collapse lista" id="conteudoNavbarSuportado" id="nav_it">
                 <!-- Navbar -->
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav mr-auto">
                     <!-- Item 1 -->
                     <li class="nav-item-dropdown item_1 item_nav">
                         <a href="#" class="nav-link dropdown toggle itemDaNav" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -99,6 +99,7 @@
         </div>
     </nav>
     <!--  -->
+    
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
