navbar parcialmente pronta

--- a/02_navbar/index.html
+++ b/02_navbar/index.html
@@ -37,9 +37,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- para agrupar e esconder conteúdos navbar, de acordo com o breakpoint do pai. -->
-            <div class="collapse navbar-collapse lista nav-itens" id="conteudoNavbarSuportado">
+            <nav class="collapse navbar-collapse lista nav-itens" id="conteudoNavbarSuportado">
                 <!-- Navbar -->
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav mr-auto">
+
                     <!-- Item 1 -->
                     <li class="nav-item-dropdown item_1 item_nav">
                         <a href="#" class="nav-link dropdown toggle itemDaNav" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -110,6 +111,14 @@
                     </li>
                 </ul>
             </div>
+            <!-- Ícones de login -->
+            <p class="mb-0 d-flex login_favoritos">
+                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login"src="img/minha conta_branco.png" alt=""></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login"src="img/carrinho_branco.png" alt=""></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login" src="img/favoritos.png" alt=""></span></a>
+                
+            </p>
+            <!-- --------------- -->
         </div>
     </nav>
     <!--  -->
