--- a/02_navbar/index.html
+++ b/02_navbar/index.html
@@ -20,8 +20,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary-color">
         <div class="container navbar-pincipal">
+            <!-- Logo -->
             <a href="#" class="navbar-brand brand-img logo1"><img src="img/logo.png" alt="logo" width="150"></a>
-            
             <!-- Botão pesquisa -->
             <div class="navbar pesq">
                 <form class="form-inline">
@@ -30,12 +30,18 @@
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                   </svg></div></button>
                 </form>
-            </div>              
-            <!-- ---------------- -->
+            </div>            
+            <!-- Ícones de login -->
+            <div class="d-flex login_favoritos">
+                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login"src="img/minha conta_branco.png" alt=""></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login"src="img/carrinho_branco.png" alt=""></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login" src="img/favoritos.png" alt=""></span></a>
+            </div>
             <!-- icones laterais -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- --------------- -->
             <!-- para agrupar e esconder conteúdos navbar, de acordo com o breakpoint do pai. -->
             <nav class="collapse navbar-collapse lista nav-itens" id="conteudoNavbarSuportado">
                 <!-- Navbar -->
@@ -111,14 +117,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- Ícones de login -->
-            <p class="mb-0 d-flex login_favoritos">
-                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login"src="img/minha conta_branco.png" alt=""></span></a>
-                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login"src="img/carrinho_branco.png" alt=""></span></a>
-                <a href="#" class="d-flex align-items-center justify-content-center item_log"><img class="login" src="img/favoritos.png" alt=""></span></a>
-                
-            </p>
-            <!-- --------------- -->
         </div>
     </nav>
     <!--  -->
